	PR gdb/9873: 	* dwarf2read.c (dwarf_decode_macros): New variable `at_commandline'. 	Move the variable `macinfo_type' out of the loop.  Create a new 	processing pass before the current one to pre-create `current_file'. 	New complaint on misplaced zero/non-zero definitions/includes. 	Skip first DW_MACINFO_start_file with `at_commandline' set.